[maven-release-plugin] prepare branch release

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<connection>scm:git:ssh://git@github.com:sureshprasanna70/testRailsApp.git</connection>
 
 		<developerConnection>scm:git:ssh://git@github.com:sureshprasanna70/testRailsApp.git</developerConnection>
-		<tag>v1.0.0</tag> 
+		<tag>release</tag> 
   	</scm>
 	<build>
 		<pluginManagement>
