--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.rails.maven</groupId>
 	<artifactId>testRailsApp</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<name>testRailsApp</name>
 	<description>testRailsApp</description>
 	<packaging>pom</packaging>
@@ -14,7 +14,7 @@
 		<connection>scm:git:git://github.com/sureshprasanna70/testRailsApp.git</connection>
 		<developerConnection>scm:git:git@github.com:sureshprasanna70/testRailsApp.git</developerConnection>
 
-		<tag>v1.0.0</tag>
+		<tag>HEAD</tag>
   	</scm>
 	<build>
 		<pluginManagement>
